Fix issue with recent posts; make p a bit larger for better readability

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -65,9 +65,9 @@ h6 {
 }
 
 p {
-  font-size: 16px;
+  font-size: 18px;
   margin-block-start: 0em;
-  margin-block-end: 0em;
+  margin-block-end: 1em;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
   text-align: justify;
