--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -32,6 +32,12 @@
   max-height: 300px;
 }
 
+.post-content img {
+  margin-left: auto;
+  margin-right: auto;
+  max-height: 300px;
+}
+
 .post-image-subtitle {
   display: block;
   text-align: right;
@@ -75,7 +81,7 @@
 
   p {
     text-align: justify;
-    font-size: 16px;
+    font-size: 18px;
   }
 }
 
